--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.76.0",
     "axios": "^1.12.2",
+    "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "papaparse": "^5.5.3",
     "react": "19.1.0",
